--- a/src/index.jade
+++ b/src/index.jade
@@ -12,7 +12,7 @@ html
             img.logo(src="assets/img/logo-navbar.svg")
             .block
                 h1.title TTÜ IT-teaduskonna üliõpilaskogu stiiliraamat
-                p.small.muted versioon 0.1-SNAPSHOT, viimati uuendatud 14. november 2017
+                p.small.muted versioon 1.0, viimati uuendatud 21. november 2017
                 p
                     | #[strong ITÜK] on Tallinna Tehnikaülikooli infotehnoloogia teaduskonna üliõpilaskogu.
                     |  Seetõttu järgime väga suures osas TTÜ stiiliraamatut.
@@ -69,8 +69,8 @@ html
                 h3 Logo värvid
                 p Logo värviskeemi valimisel lähtuda järgnevast:
                 ul
-                    li #[strong Värviline logo] - kasutada valgel/väga heledal taustal
-                    li #[strong Must logo] - kasutada valgel/heledal taustal
+                    li #[strong Värviline logo] - kasutada valgel/väga heledal taustal (tumedaim lubatud taust on #[span.monospace #f8f8f8])
+                    li #[strong Must logo] - kasutada valgel/heledal taustal (tumedaim lubatud taust on #[span.monospace #f8f8f8])
                     li #[strong Valge logo] - kasutada värvilisel/tumedal taustal
                 p
                     | Logol olev tekst PEAB vastama WCAG AAA standardile. Seda saad kontrollida
