--- a/src/index.jade
+++ b/src/index.jade
@@ -18,7 +18,7 @@ html
                     |  Seetõttu järgime väga suures osas TTÜ stiiliraamatut.
                 a(href="#contact") Kontakt
             .block
-                h2 Nimi ja lühendamine.
+                h2 Nimi ja lühendamine
                 p
                     | Kui ITÜKi nime kasutatakse kontekstis, kus arvestatav osa lugejatest ei tea mida ITÜK tähendab,
                     |  siis palume kirjutada välja ITÜKi nimi (nt. TTÜ IT-teaduskonna üliõpilaskogu).
