added color specs

--- a/src/index.jade
+++ b/src/index.jade
@@ -70,7 +70,7 @@ html
                 p Logo värviskeemi valimisel lähtuda järgnevast:
                 ul
                     li #[strong Värviline logo] - kasutada valgel/väga heledal taustal (tumedaim lubatud taust on #[span.monospace #f8f8f8])
-                    li #[strong Must logo] - kasutada valgel/heledal taustal (tumedaim lubatud taust on #[span.monospace #f8f8f8])
+                    li #[strong Must logo] - kasutada valgel/heledal taustal (tumedaim lubatud taust on #[span.monospace #e8e8e8])
                     li #[strong Valge logo] - kasutada värvilisel/tumedal taustal
                 p
                     | Logol olev tekst PEAB vastama WCAG AAA standardile. Seda saad kontrollida
