--- a/src/index.jade
+++ b/src/index.jade
@@ -101,7 +101,7 @@ html
                             p CMYK: 0, 0, 0, 70
                     .col(style="background-color: #000000; color: #fff")
                         .color-spec
-                            p HEX: #00000000
+                            p HEX: #000000
                             p RGB: 0, 0, 0
                             p CMYK: 0, 0, 0, 100
                     .col(style="background-color: #ffffff; color: #000000")
