added google analytics

--- a/src/index.jade
+++ b/src/index.jade
@@ -122,3 +122,11 @@ html
                     | Kõikide küsimustega ITÜKi identiteedi suhtes saata meil
                     |  #[a(href="mailto:kontakt@ituk.ee") kontakt@ituk.ee].
                 p Palume mitte ise olla loomingulised, igasuguste küsimuste korral pöörduda ITÜKi poole.
+        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-104645998-3")
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-104645998-3');
+
