updated stylebook TTÜ -> TalTech

--- a/src/index.jade
+++ b/src/index.jade
@@ -20,30 +20,30 @@ html
         #main
             img.logo(src="assets/img/logo-navbar.svg")
             .block
-                h1.title TTÜ IT-teaduskonna üliõpilaskogu stiiliraamat
+                h1.title TalTechi IT-teaduskonna üliõpilaskogu stiiliraamat
                 p.small.muted viimati uuendatud #{ prettyDate() }
                 p
                     | #[strong ITÜK] on Tallinna Tehnikaülikooli infotehnoloogia teaduskonna üliõpilaskogu.
-                    |  Seetõttu järgime väga suures osas TTÜ stiiliraamatut.
+                    |  Seetõttu järgime väga suures osas TalTechi stiiliraamatut.
                 a(href="#contact") Kontakt
             .block
                 h2 Nimi ja lühendamine
                 p
                     | Kui ITÜKi nime kasutatakse kontekstis, kus arvestatav osa lugejatest ei tea mida ITÜK tähendab,
-                    |  siis palume kirjutada välja ITÜKi nimi (nt. TTÜ IT-teaduskonna üliõpilaskogu).
+                    |  siis palume kirjutada välja ITÜKi nimi (nt. TalTechi IT-teaduskonna üliõpilaskogu).
                 p
                     | Nime võib kirjuta nii Tallinna Tehnikaülikooli eesliitega täis pikalt, ilma eesliiteta ja lühendina.
                     | Lubatud kirjutamise viisid on:
                 ul
                     li Tallinna Tehnikaülikooli IT-teaduskonna üliõpilaskogu
-                    li TTÜ IT-teaduskonna üliõpilaskogu
+                    li TalTechi IT-teaduskonna üliõpilaskogu
                     li IT-teaduskonna üliõpilaskogu
                     li ITÜK
                 p
                     | Lubatud, kuid mitte-eelistatud viisid:
                 ul
                     li Tallinna Tehnikaülikooli infotehnoloogia teaduskonna üliõpilaskogu
-                    li TTÜ infotehnoloogia teaduskonna üliõpilaskogu
+                    li TalTechi infotehnoloogia teaduskonna üliõpilaskogu
                 p
                     | Jälgi suure- ja väikese algustähe õigekirja! ITÜKi nime valesti kirjutamine ei ole lubatud!
                     | ITÜK lühendi käänamisel lühendi lõppu sidekriipsu ei lisata, näiteks (ITÜKi, ITÜKile).
@@ -54,22 +54,22 @@ html
                     | Veebis kasutamiseks on olemas SVG versioonid ja trükiks PDF versioonid.
                     | Palun väldi ka SVG kasutamist trükis ja PDF kasutamist veebis, sest need on vastavalt RGB ja CMYK
                     | värviruumides, mis pole otseselt teisendatavad.
-                a.button(href="files/ituk.logo.pack.zip") Laadi alla logopakk
+                a.button(href="files/ITÜK_logopack.zip") Laadi alla logopakk
 
-                h3 Logo kasutamine koos TTÜ logoga või ilma TTÜ logota
+                h3 Logo kasutamine koos TalTechi logoga või ilma TalTechi logota
                 p
-                    | TTÜ siseselt kasutatakse ITÜKi logot ilma TTÜ logota,
+                    | TalTechi siseselt kasutatakse ITÜKi logot ilma TalTechi logota,
                     | et vältida ühe ja sama logo kordumist ürituste jms postritel, reklaamidel jne.
-                    | Väljaspool TTÜd kasutatakse varianti logost, kus on lisaks ka TTÜ logo.
+                    | Väljaspool TalTechi kasutatakse varianti logost, kus on lisaks ka TalTechi logo.
 
                 h3 Logo variandid
                 p
                     | Ikooni võib kasutada ainult juhul, kui pikk logo ei jääks loetav, kujunduselemendina või
                     | juhul, kui on väga lihtne viia ITÜK kokku ikooniga.
                     | Ikooni võib kasutada nii kastiga kui ilma.
-                h5 Pikk variant TTÜ logoga
-                img(src="assets/img/ituk.horisontal.long.colored.svg")
-                h5 Pikk variant ilma TTÜ logota
+                h5 Pikk variant TalTechi logoga
+                img(src="assets/img/ituk.horisontal.long.colored.taltech.svg")
+                h5 Pikk variant ilma TalTechi logota
                 img(src="assets/img/ituk.horisontal.long.color.nottu.svg")
                 h5 Logotype
                 img(src="assets/img/ituk.logotype.colored.svg")
